--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.15",
     "@webcontainer/api": "^1.6.1",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.24",
     "highlight.js": "^11.11.1",
     "markdown-to-jsx": "^8.0.0",
     "react": "^19.1.1",
